// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RevisionSelect > Disabled 1`] = `
<body>
  <div>
    <div
      aria-disabled="true"
      data-disabled=""
      data-headlessui-state="disabled"
      disabled=""
    >
      <label
        class="block text-sm font-medium leading-6 text-gray-900 dark:text-gray-100"
        data-disabled=""
        data-headlessui-state="disabled"
        for="headlessui-control-:r8:"
        id="headlessui-label-:rb:"
      >
        Revision
      </label>
      <div
        class="relative mt-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="headlessui-label-:rb: headlessui-control-:r8:"
          class="bg-gray-100 dark:bg-gray-800 ring-gray-300 dark:ring-gray-600 ring-1 relative w-full cursor-default rounded-md py-1.5 pl-1 pr-10 text-left text-gray-900 dark:text-gray-100 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-600 sm:text-sm sm:leading-6"
          data-disabled=""
          data-headlessui-state="disabled"
          disabled=""
          id="headlessui-control-:r8:"
          type="button"
        >
          <span
            class="flex items-center"
          >
            <span
              class="ml-2 mr-2 block truncate"
            >
              169d4a4341b33bc18d8881c4b69c2e104e1cc0af
            </span>
          </span>
        </button>
      </div>
      <span
        hidden=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </div>
</body>
`;

exports[`RevisionSelect > Standard 1`] = `
<body>
  <div>
    <div
      aria-disabled="true"
      data-disabled=""
      data-headlessui-state="disabled"
      disabled=""
    >
      <label
        class="block text-sm font-medium leading-6 text-gray-900 dark:text-gray-100"
        data-disabled=""
        data-headlessui-state="disabled"
        for="headlessui-control-:r0:"
        id="headlessui-label-:r3:"
      >
        Revision
      </label>
      <div
        class="relative mt-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="headlessui-label-:r3: headlessui-control-:r0:"
          class="bg-gray-100 dark:bg-gray-800 ring-gray-300 dark:ring-gray-600 ring-1 relative w-full cursor-default rounded-md py-1.5 pl-1 pr-10 text-left text-gray-900 dark:text-gray-100 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-600 sm:text-sm sm:leading-6"
          data-disabled=""
          data-headlessui-state="disabled"
          disabled=""
          id="headlessui-control-:r0:"
          type="button"
        >
          <span
            class="flex items-center"
          >
            <span
              class="ml-2 mr-2 block truncate"
            >
              169d4a4341b33bc18d8881c4b69c2e104e1cc0af
            </span>
          </span>
        </button>
      </div>
      <span
        hidden=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
  </div>
</body>
`;
